custom-style.css
/* ... */
.wcorg-organizer img:not(:hover) {
    width: 8rem;
}

.entry-content .wcorg-organizer h2 {
    font-size: 2.4rem;
    line-height: 1.1;
    margin: 0 0 0 0;
    text-align: center;
}

.wcorg-organizer-description p {
    font-style: italic;
    margin-bottom: 0;
}



/* FOOTER */


.site-footer {
    background: rgba( 17, 17, 17, 1 );
    margin-top: 18rem;
}

#footer-widgets {
    margin: 0 auto 0 auto;
    max-width: 90%;
    width: 124rem;
}

#footer-widgets:after {
    content: "";
    clear: both;
    display: block;
}

body a.footer-block {
        -webkit-box-align: center;
        -ms-flex-align: center;
    align-items: center;
    color: rgba( 255, 255, 255, 1 );
        display: -webkit-box;
        display: -ms-flexbox;
    display: flex;
    height: 40rem;
    float: left;
    margin-top: -8rem;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
    justify-content: center;
    text-shadow: 0 .1rem 0 rgba( 0, 0, 0, 0.1 );
    width: 50%;
}

.footer-block:hover {
    color: rgba( 255, 255, 255, 1 );
}

.footer-block.blue {
    background-image: linear-gradient(-135deg, #549CF9 0%, #096DAE 100%);
}

.footer-block.yellow {
    background-image: linear-gradient(-225deg, #FAD24E 0%, #E9B700 100%);
}

.inner-block {
    width: 36rem;
    max-width: 90%;
    margin: 0 auto 0 auto;
    text-align: center;
}

.footer-block p {
    margin: 0 0 0 0;
}


/* CREDITS */


.site-info {
    padding: 4.1rem 0 4.1rem 0;
    text-align: center;
}

.site-info .site-info-generator {
    color: rgba( 255, 255, 255, 1 );
    font-family: 'freight-sans-pro', Roboto, sans-serif;
    font-size: 1.6rem;
    font-weight: 600;
    letter-spacing: .1rem;
    text-transform: uppercase;
}

.site-info .site-info-network {
    display: none;
}


/* TRANSITIONS */


body .site-navigation .twitter-link a {
        -webkit-transition: all .1s ease-in-out;
        -moz-transition:    all .1s ease-in-out;
        -o-transition:      all .1s ease-in-out;
    transition:             all .1s ease-in-out;
}

.hero .intro-arrow,
.shortcut:before {
        -webkit-transition: all .2s ease-in-out;
        -moz-transition:    all .2s ease-in-out;
        -o-transition:      all .2s ease-in-out;
    transition:             all .2s ease-in-out;
}

 {
        -webkit-transition: all .3s ease-in-out;
        -moz-transition:    all .3s ease-in-out;
        -o-transition:      all .3s ease-in-out;
    transition:             all .3s ease-in-out;
}

 {
        -webkit-transition: all .4s ease-in-out;
        -moz-transition:    all .4s ease-in-out;
        -o-transition:      all .4s ease-in-out;
     transition:             all .4s ease-in-out;
}





/* RESPONSIVE */


@media ( max-width: 900px ) and ( min-width: 600px ) {
    
    .site-navigation {
        padding-right: 0;
    }

    .site-navigation .menu > li + li {
        margin-left: 3rem;
    }

}


@media ( max-width: 900px ) {


    /* SITE HEADER */
    
    .site-header h1.site-title a {
        height: 5rem;
        margin-right: 10rem;
        width: 13.8rem;
    }
    
    /* NAVIGATION */
    
    body .site-navigation .twitter-link {
        display: none;
    }
    
    /* HOME */
    
    /* INTRO */
    
    .intro p:first-child {
        font-size: 3.2rem;
    }
    
    /* SHORTCUTS */
    
    body a.shortcut {
        height: 25rem;
        margin: 0 0 0 0;
        width: 100%;
    }
    
    body a.shortcut:first-child { margin-top: -4rem; }
    body a.shortcut:last-child { margin-bottom: -4rem; }
    
    
    /* SPEAKERS */
    
    .wcorg-speakers {
        left: calc( 50% - 45vw - 1rem );
        margin: 0 0 -2rem -1rem;
        width: calc( 90vw + 1rem );
    }

    .wcorg-speaker {
            -ms-flex: 1 0 calc( 33.33% - 1rem );
            -webkit-flex: 1 0 calc( 33.33% - 1rem );
        flex: 1 0 calc( 33.33% - 1rem );
        margin: 0 0 2rem 1rem;
        max-width: calc( 33.33% - 1rem );
        padding-top: 9.5rem;
    }

    .wcorg-speaker img {
        left: calc( 50% - 4rem );
        width: 8rem;
    }

    .wcorg-speaker h2 {
        font-size: 2.2rem;
    }

    .wcorg-speaker h3 {
        font-size: 1.8rem;
    }
    
    
    /* POSTS */
    
    .home #content {
        min-height: none;
        padding: 0 5% 10% 5%;
    }
    
    .home article:first-child {
        height: 40rem;
        margin-bottom: 10%;
        padding: 10% 5% 10% 5%;
        position: relative;
            bottom: auto;
            left: calc( 50% - 50vw );
            right: auto;
            top: auto;
        width: 100vw;
    }
    
    .home article:not(:first-child) {
        margin-left: 0;
    }
    
    /* SPONSORS */
    
    .sponsor-level {
        padding-left: 0;
    }
    
    .sponsor-level-title {
        font-size: 2.4rem;
        margin-bottom: 1.5rem;
        position: static;
        width: 100%;
    }
    
    body .wcb_widget_sponsors .sponsor-logo {
        margin: 0 2rem 2rem 0;
    }
    
    /* ORGANIZERS */
    
    .wcorg-organizer {
            -ms-flex: 1 0 calc( 33.33% - 3rem );
            -webkit-flex: 1 0 calc( 33.33% - 3rem );
        flex: 1 0 calc( 33.33% - 3rem );
        max-width: calc( 33.33% - 3rem );
    }

}
/* ... */

